---
source: src/syntax/latex/lexer.rs
expression: "verify(r#\"{foo} (bar) [baz, qux = foo-bar]\"#)"

---
[
    (
        L_CURLY,
        "{",
    ),
    (
        WORD,
        "foo",
    ),
    (
        R_CURLY,
        "}",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        L_PAREN,
        "(",
    ),
    (
        WORD,
        "bar",
    ),
    (
        R_PAREN,
        ")",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        L_BRACK,
        "[",
    ),
    (
        WORD,
        "baz",
    ),
    (
        COMMA,
        ",",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        WORD,
        "qux",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        EQUALITY_SIGN,
        "=",
    ),
    (
        WHITESPACE,
        " ",
    ),
    (
        WORD,
        "foo-bar",
    ),
    (
        R_BRACK,
        "]",
    ),
]
